# 3dvisualizer

./: .gitignore  .gitmodules  CMakeLists.txt  MainWindow.cpp  MainWindow.ui  README.md
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: DataEditorWidget.cpp  DataEditorWidget.h  DataEditorWidget.ui  GenericDialog.cpp  GenericDialog.h  GenericDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MaterialModel.cpp  MaterialModel.h  RenderDataWidget.cpp  RenderDataWidget.h  RenderDataWidget.ui  RendererGlWindow.cpp  RendererGlWindow.h  TextureModel.cpp  TextureModel.h
src/models/: AbstractDataModel.h  AbstractReferenceModel.h  AbstractValueModel.h  GeometryModel.cpp  GeometryModel.h  InstanceModel.cpp  InstanceModel.h  MaterialModel.cpp  MaterialModel.h  ModelModel.cpp  ModelModel.h  ModelPartModel.cpp  ModelPartModel.h  ObjectModel.cpp  ObjectModel.h  TextureModel.cpp  TextureModel.h
src/resourcewidgets/: AddMaterialWidget.cpp  AddMaterialWidget.h  AddMaterialWidget.ui  AddObjectWidget.cpp  AddObjectWidget.h  AddObjectWidget.ui  AddResourceWidget.h  AddTextureWidget.cpp  AddTextureWidget.h  AddTextureWidget.ui
